Showed how standard paths are designed to construct a basis element slice by slice. It will now be simple to prove a standard path maps to the corresponding basis element in the generic algebra.

--- a/preamble.sty
+++ b/preamble.sty
@@ -172,12 +172,18 @@
 % set of periodic characteristic matrices.
 \newcommand{\matrices}[1][]{\Lambda_1{#1}}
 
+% diagonal matrix.
+\newcommand{\diag}[1]{D_{#1}}
+
 % row and column sums of characteristic matrix.
 \newcommand{\ro}[1]{\operatorname{ro}(#1)}
 \newcommand{\co}[1]{\operatorname{co}(#1)}
 
-% weight of the characteristic matrix
+% weight of the characteristic matrix.
 \newcommand{\weight}[1]{\operatorname{wt}(#1)}
+
+% height of the characteristic matrix.
+\newcommand{\height}[1]{\operatorname{ht}(#1)}
 
 % orbits in double flag variety:
 \newcommand{\orbit}[1]{\mathcal{O}_{#1}}
